--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^3.0.2",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "joi": "^17.9.2",
+    "knex": "^2.5.1",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
